header added to the page

--- a/site/resume.html
+++ b/site/resume.html
@@ -13,6 +13,24 @@
     <title>Curriculum Vitae</title>
 </head>
 <body>
-    <h1>Mohammed Muzaffar Hussain</h1>
+    <header>
+        <nav class="navbar navbar-expand-md">
+            <div class="container">
+                <a href="" class="navbar-brand">
+                    <h2>Mohammed Muzaffar Hussain</h2>
+                </a>
+            </div>
+        </nav>
+        <nav class="navbar navbar-expand-md">
+            <div class="container">
+                <div class="navbar-collapse">
+                    <label for="email">Email: muzaffar.898@gmail.com</label>
+                    <ul class="navbar-nav ml-auto">
+                        <li>Contact: 91-9908571202</li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
