another section added to the page

--- a/site/resume.html
+++ b/site/resume.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-md">
             <div class="container">
                 <a href="" class="navbar-brand">
-                    <h2>Mohammed Muzaffar Hussain</h2>
+                    Mohammed Muzaffar Hussain
                 </a>
             </div>
         </nav>
@@ -32,5 +32,41 @@
             </div>
         </nav>
     </header>
+    <div class="main-content">
+        <section>
+            <div class="container">
+                <h4 class="title">Objectives</h4>
+                <p>Looking for career opportunities to make full use of my skills and experience by contributing significantly to the company's success with a total of 9 years, 3 years of experience as a front end web developer. </p>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <h4 class="title">Certification and Skills Fit</h4>
+                <p>Oracle Database Certified Associates &lpar;OCA 11g &rpar;</p>
+                <p><strong>Front-End:</strong> HTML, CSS, Javascript, JQuery, Bootstrap</p>
+                <p><strong>Networking:</strong> MCSE</p>
+                <p><strong>Languages:</strong> SQL, PL/SQL</p>
+                <p><strong>Back-End:</strong> Oracle Database 11g</p>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <h4 class="title">Experience and Employement Scan</h4>
+                <nav class="navbar navbar-expand-md">
+                    <a href="" class="header-brand"><strong>Web Developer Roles :</strong></a>
+                    <ul class="navbar-nav ml-auto"><strong>Jan-2018 - Aug-2021</strong></ul>
+                </nav>
+                <ul>
+                    <strong>Awag Group Riyadh - K.S.A</strong>
+                    <li>Responsible for designing, coding and modifying websites, from layout to function and according to a client's specifications. Strive to create visually appealing sites that feature user-friendly design and clear navigation.</li>
+                    <li>Coordinates by analyzing, creating, designing and developing a webpage, websites and web services using client-side languages such as HTML and server-side scripting languages using PHP and also modifying the structure according to the business required.</li>
+                    <li>Coordinate in creating and preparing database links to the user interface so that information can be retrieved, processed and stored with the help of the application.</li>
+                    <li>Coordinates with by designing, developing and preparing flash animation home page, contact page, invoice generation application, inventory management and also coordinates preparing a graphic design to a web page with the client-side language.</li>
+                    <li>Coordinates in creating and designing a web page to integrate with code and content using CSS and JavaScript.</li>
+                    <li>Coordinates with by designing and developing code and script to make the various features work to ensure sounds like graphics, audio, video, animations and timing work planned to make good processing and storage capacity.</li>
+                </ul>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
