Footer added to the page

--- a/site/resume.html
+++ b/site/resume.html
@@ -39,25 +39,25 @@
                 <p>Looking for career opportunities to make full use of my skills and experience by contributing significantly to the company's success with a total of 9 years, 3 years of experience as a front end web developer. </p>
             </div>
         </section>
-        <section>
+        <section id="section-skills">
             <div class="container">
                 <h4 class="title">Certification and Skills Fit</h4>
                 <p>Oracle Database Certified Associates &lpar;OCA 11g &rpar;</p>
-                <p><strong>Front-End:</strong> HTML, CSS, Javascript, JQuery, Bootstrap</p>
-                <p><strong>Networking:</strong> MCSE</p>
-                <p><strong>Languages:</strong> SQL, PL/SQL</p>
-                <p><strong>Back-End:</strong> Oracle Database 11g</p>
+                <p><strong>Front-End: </strong>HTML, CSS, Javascript, JQuery, Bootstrap</p>
+                <p><strong>Networking: </strong>MCSE</p>
+                <p><strong>Languages: </strong>SQL, PL/SQL</p>
+                <p><strong>Back-End: </strong>Oracle Database 11g</p>
             </div>
         </section>
         <section>
             <div class="container">
                 <h4 class="title">Experience and Employement Scan</h4>
                 <nav class="navbar navbar-expand-md">
-                    <a href="" class="header-brand"><strong>Web Developer Roles :</strong></a>
+                    <b>Web Developer:</b>
                     <ul class="navbar-nav ml-auto"><strong>Jan-2018 - Aug-2021</strong></ul>
                 </nav>
                 <ul>
-                    <strong>Awag Group Riyadh - K.S.A</strong>
+                    <b>Awag Group Riyadh - K.S.A</b>
                     <li>Responsible for designing, coding and modifying websites, from layout to function and according to a client's specifications. Strive to create visually appealing sites that feature user-friendly design and clear navigation.</li>
                     <li>Coordinates by analyzing, creating, designing and developing a webpage, websites and web services using client-side languages such as HTML and server-side scripting languages using PHP and also modifying the structure according to the business required.</li>
                     <li>Coordinate in creating and preparing database links to the user interface so that information can be retrieved, processed and stored with the help of the application.</li>
@@ -65,8 +65,65 @@
                     <li>Coordinates in creating and designing a web page to integrate with code and content using CSS and JavaScript.</li>
                     <li>Coordinates with by designing and developing code and script to make the various features work to ensure sounds like graphics, audio, video, animations and timing work planned to make good processing and storage capacity.</li>
                 </ul>
+                <nav class="navbar navbar-expand-md">
+                    <b>Tech Support:</b>
+                    <ul class="navbar-nav ml-auto"><strong>Oct-2013 - Dec-2017</strong></ul>
+                </nav>
+                <ul>
+                    <b>Awag Group Riyadh - K.S.A</b>
+                    <li>Support ORPRO POS application, install client software, diagnose and resolves technical issues. Responsible for managing backups, performance tuning, defragmentation and re-indexing tables.</li>
+                    <li>Responsible for installing data repository for RPro Prism and all supporting components, configure data replication services and support hardware peripherals, document design and perform routine maintenance tasks.</li>
+                    <li>Responsible for RPro Prism application features and functionalities, setup layouts, stores, prices and taxes, themes, search screen, install Electornic Communication Manger to transfer data between client and server.</li>
+                    <li>Allocate seats for RPro workstations, setup polling station and station checklists. Initialize, Regenerates the workstations history.</li>
+                    <li>Generate reports, diagnose report and troubleshoot database-related issues including data backup and recovery methodologies. Use reconstruct tools to fix data corruption.</li>
+                    <li>Responsible for installing the hardware that makes up the physical part of the network, configure the files, hosts, routers, and network configuration server.</li>
+                    <li>Setup user accounts, permissions, password and administer network security, NFS services, Name services and Emails and troubleshoot network problems.</li>
+                    <li>Provide hardware and Operating system support for the computer systems, environment, access organization’s network and computer system, collect and analyze data to optimize performance.</li>
+                    <li>Responsible for handling issues related to Local area network (LAN), Wide area network, maintain O.S, business applications, security tools, emails, laptop and desktop Pcs.</li> 
+                </ul>
+                <nav class="navbar navbar-expand-md">
+                   <b>Oracle Developer:</b>
+                    <ul class="navbar-nav ml-auto"><strong>Jun-2011 - Feb-2013</strong></ul>
+                </nav>
+                <ul>
+                    <b>OMR Technologies, Hyderabad</b>
+                    <li>Develop Schemas, Tables, Triggers, Sequences, Constraints, Functions and Procedures.</li>
+                    <li>Understand business requirement and develop database models accordingly. Coordinate and work with other technical staff to develop a relational database Design and deploy data table structures, forms, reports, and queries.</li>
+                    <li>Perform system design, upgrades and maintain according to business needs.</li>
+                    <li>Develops database objects and structures for data storage, retrieval and reporting according to the project specifications. Provide support for Database Administrators.</li>
+                    <li>Diagnose and resolve database access and performance issues. Work on front end and back end development as requested. Interact with the users, involved in system study.</li>
+                    <li>Oracle Web Logic as Middleware for back end connectivity with the database.</li>
+                    <li>Setting up a new user’s account and profiles. Write stored procedures for creating reports.</li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <h4 class="title">Qualification</h4>
+                <nav class="navbar navbar-expand-md">
+                    <a href="" class="header-brand"><strong>B.Engineering:</strong></a>
+                    <ul class="navbar-nav ml-auto"><strong>2005 - 2008</strong></ul>
+                </nav>
+                <ul><b>Osmania University, Hyderabad</b></ul>
+                                
+                <nav class="navbar navbar-expand-md">
+                    <a href="" class="header-brand"><strong>Diploma:</strong></a>
+                    <ul class="navbar-nav ml-auto"><strong>2001 - 2004</strong></ul>
+                </nav>
+                <ul><b>JNTU Govt Polytechnic, Hyderabad</b></ul>                                
             </div>
         </section>
     </div>
+    <footer>
+        <div class="container">
+            <h4 class="title">Personal Information</h4> 
+            <strong>Name</strong><p>Mohammed Muzaffar Hussain</p>
+            <strong>Nationality</strong><p>Indian</p>
+            <strong>Marital Status</strong><p>Married</p>
+            <strong>Passport Issue Date</strong><p>18-Sep-2018</p>
+            <strong>Passport Expiry Date</strong><p>17-Sep-2028</p>
+        </div>
+    </footer>
+
 </body>
 </html>
