no break space added to the page

--- a/site/resume.html
+++ b/site/resume.html
@@ -117,7 +117,7 @@
     <footer>
         <div class="container">
             <h4 class="title">Personal Information</h4> 
-            <strong>Name</strong><p>Mohammed Muzaffar Hussain</p>
+            <strong>Name</strong><p>Mohammed&nbsp;Muzaffar&nbsp;Hussain</p>
             <strong>Nationality</strong><p>Indian</p>
             <strong>Marital Status</strong><p>Married</p>
             <strong>Passport Issue Date</strong><p>18-Sep-2018</p>
