fluid added to the container

--- a/site/resume.html
+++ b/site/resume.html
@@ -34,7 +34,7 @@
     </header>
     <div class="main-content">
         <section>
-            <div class="container">
+            <div class="container-fluid">
                 <h4 class="title">Objectives</h4>
                 <p>Looking for career opportunities to make full use of my skills and experience by contributing significantly to the company's success with a total of 9 years, 3 years of experience as a front end web developer. </p>
             </div>
@@ -50,7 +50,7 @@
             </div>
         </section>
         <section>
-            <div class="container">
+            <div class="container-fluid">
                 <h4 class="title">Experience and Employement Scan</h4>
                 <nav class="navbar navbar-expand-md">
                     <b>Web Developer:</b>
@@ -98,7 +98,7 @@
             </div>
         </section>
         <section>
-            <div class="container">
+            <div class="container-fluid">
                 <h4 class="title">Qualification</h4>
                 <nav class="navbar navbar-expand-md">
                     <a href="" class="header-brand"><strong>B.Engineering:</strong></a>
@@ -115,9 +115,9 @@
         </section>
     </div>
     <footer>
-        <div class="container">
+        <div class="container-fluid">
             <h4 class="title">Personal Information</h4> 
-            <strong>Name</strong><p>Mohammed&nbsp;Muzaffar&nbsp;Hussain</p>
+            <strong>Name</strong><p>Mohammed Muzaffar Hussain</p>
             <strong>Nationality</strong><p>Indian</p>
             <strong>Marital Status</strong><p>Married</p>
             <strong>Passport Issue Date</strong><p>18-Sep-2018</p>
