--- a/site/resume.html
+++ b/site/resume.html
@@ -40,7 +40,7 @@
             </div>
         </section>
         <section id="section-skills">
-            <div class="container">
+            <div class="container-fluid">
                 <h4 class="title">Certification and Skills Fit</h4>
                 <p>Oracle Database Certified Associates &lpar;OCA 11g &rpar;</p>
                 <p><strong>Front-End: </strong>HTML, CSS, Javascript, JQuery, Bootstrap</p>
