--- a/site/resume.html
+++ b/site/resume.html
@@ -26,7 +26,7 @@
                 <div class="navbar-collapse">
                     <label for="email">Email: muzaffar.898@gmail.com</label>
                     <ul class="navbar-nav ml-auto">
-                        <li>Contact: 91-9908571202</li>
+                        <li>Contact: 91-7842365951</li>
                     </ul>
                 </div>
             </div>
@@ -42,7 +42,7 @@
         <section id="section-skills">
             <div class="container-fluid">
                 <h4 class="title">Certification and Skills Fit</h4>
-                <a href="https://courses.w3schools.com/certificates/introduction-to-cyber-security-552.pdf">Introduction to Cyber Security</a>
+                <p><a href=""><em>Introduction to Cyber Security Certificate</em></a></p>
                 <p>Oracle Database Certified Associates &lpar;OCA 11g &rpar;</p>
                 <p><strong>Front-End: </strong>HTML, CSS, Javascript, JQuery, Bootstrap</p>
                 <p><strong>Networking: </strong>MCSE</p>
