Remove hardware responsibilities

--- a/site/resume.html
+++ b/site/resume.html
@@ -36,7 +36,8 @@
         <section>
             <div class="container-fluid">
                 <h4 class="title">Objectives</h4>
-                <p>Looking for career opportunities to make full use of my skills and experience by contributing significantly to the company's success with a total of 9 years, 3 years of experience as a front end web developer. </p>
+                <!--p>Looking for career opportunities to make full use of my skills and experience by contributing significantly to the company's success with a total of 9 years, 3 years of experience as a front end web developer. </p-->
+                <p>Looking for career opportunities to make full use of my skills and experience by contributing significantly to the company's success with a total of 9 years of experience.</p>
             </div>
         </section>
         <section id="section-skills">
@@ -58,7 +59,7 @@
                     <ul class="navbar-nav ml-auto"><strong>Jan-2018 - Aug-2021</strong></ul>
                 </nav>
                 <ul>
-                    <b>Awag Group Riyadh - K.S.A</b>
+                    <b>Abdul Wahab Algarawi Group Riyadh - K.S.A</b>
                     <li>Responsible for designing, coding and modifying websites, from layout to function and according to a client's specifications. Strive to create visually appealing sites that feature user-friendly design and clear navigation.</li>
                     <li>Coordinates by analyzing, creating, designing and developing a webpage, websites and web services using client-side languages such as HTML and server-side scripting languages using PHP and also modifying the structure according to the business required.</li>
                     <li>Coordinate in creating and preparing database links to the user interface so that information can be retrieved, processed and stored with the help of the application.</li>
@@ -71,16 +72,16 @@
                     <ul class="navbar-nav ml-auto"><strong>Oct-2013 - Dec-2017</strong></ul>
                 </nav>
                 <ul>
-                    <b>Awag Group Riyadh - K.S.A</b>
-                    <li>Support ORPRO POS application, install client software, diagnose and resolves technical issues. Responsible for managing backups, performance tuning, defragmentation and re-indexing tables.</li>
-                    <li>Responsible for installing data repository for RPro Prism and all supporting components, configure data replication services and support hardware peripherals, document design and perform routine maintenance tasks.</li>
-                    <li>Responsible for RPro Prism application features and functionalities, setup layouts, stores, prices and taxes, themes, search screen, install Electornic Communication Manger to transfer data between client and server.</li>
-                    <li>Allocate seats for RPro workstations, setup polling station and station checklists. Initialize, Regenerates the workstations history.</li>
+                    <b>Abdul Wahab Algarawi Group Riyadh - K.S.A</b>
+                    <li>Support Oracle RetailPro POS application, install client software, diagnose and resolves technical issues. Responsible for managing backups, performance tuning, defragmentation and re-indexing tables.</li>
+                    <li>Responsible for installing data repository for RetailPro Prism and all supporting components, configure data replication services and support hardware peripherals, document design and perform routine maintenance tasks.</li>
+                    <li>Responsible for RetailPro Prism application features and functionalities, setup layouts, stores, prices and taxes, themes, search screen, install Electornic Communication Manger to transfer data between client and server.</li>
+                    <li>Allocate seats for RetailPro workstations, setup polling station and station checklists. Initialize, Regenerates the workstations history.</li>
                     <li>Generate reports, diagnose report and troubleshoot database-related issues including data backup and recovery methodologies. Use reconstruct tools to fix data corruption.</li>
-                    <li>Responsible for installing the hardware that makes up the physical part of the network, configure the files, hosts, routers, and network configuration server.</li>
+                    <!--li>Responsible for installing the hardware that makes up the physical part of the network, configure the files, hosts, routers, and network configuration server.</li>
                     <li>Setup user accounts, permissions, password and administer network security, NFS services, Name services and Emails and troubleshoot network problems.</li>
                     <li>Provide hardware and Operating system support for the computer systems, environment, access organization’s network and computer system, collect and analyze data to optimize performance.</li>
-                    <li>Responsible for handling issues related to Local area network (LAN), Wide area network, maintain O.S, business applications, security tools, emails, laptop and desktop Pcs.</li> 
+                    <li>Responsible for handling issues related to Local area network (LAN), Wide area network, maintain O.S, business applications, security tools, emails, laptop and desktop Pcs.</li--> 
                 </ul>
                 <nav class="navbar navbar-expand-md">
                    <b>Oracle Developer:</b>
